Switch to static MethodHandle